# traits

./: .gitignore  README.md
traits/: README.rst  pyproject.toml  setup.py
traits/notebooks/: BRYOTraits for Silvia.xlsx  Combined.ipynb  Untitled.ipynb  Untitled3.ipynb  Untitled4.ipynb  bryo.xlsx  bryophytes.ipynb  characters-corrected.csv  characters-model-dec-15.csv  characters-model-dec.csv  characters.csv  corrections.ipynb  desc-dataset.csv  desc.ipynb  dropped_terms.csv  fields-processing.ipynb  fields.ipynb  fields.yaml  meta.yaml  numeric.ipynb  output.xlsx  pipe.ipynb  pipeline.ipynb  postprocess.ipynb  susies-species-traits.xlsx  trait-ontology.ipynb  v2-susies-species-traits.xlsx
traits/notebooks/genus-species/: Cindy's Master's species[24].csv  Rainie's Master's species[77].csv  Susie's Master's species[36].csv
traits/notebooks/notebooks/: Input.ipynb  Pipeline.ipynb  Traits.ipynb  Untitled.ipynb  neural-network.ipynb  patterns.jsonl  scipsacy.ipynb
traits/tests/: test_adept.py
traits/traits/: config.py  project.yml
traits/traits/assets/: anatomical-parts.yml  cindys-masters-5-species.csv  cindys-masters-genus-species.csv  cindys-masters-genus.csv  cindys-species.csv  masters-genus-v2.csv  masters-species-v2.csv  masters-species.csv  peatland-species.csv  rainies-masters-genus-species.csv  rainies-masters-genus.csv  rainies-species.csv  susies-masters-genus-species.csv  susies-masters-genus.csv  susies-species.csv  test.csv
traits/traits/components/: anatomical.py  base.py  helpers.py  registry.py  sentencizer.py
traits/traits/sources/: accdb.py  (+5 more)
(+78 files in other folders)
