[tool.poetry]
name = "traits"
version = "0.1.0"
description = ""
authors = ["Ben Scott <ben@benscott.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.4"
spacy = "^3.1.3"
requests-cache = "^0.8.1"
toml = "^0.10.2"
python-dotenv = "^0.19.1"
genpipes = "^0.1.2"
Wikipedia-API = "^0.5.4"
beautifulsoup4 = "^4.10.0"
tld = "^0.12.6"
PyYAML = "^6.0"
html5lib = "^1.1"
pymongo = "^3.12.1"
pypyodbc = "^1.3.5"
pandas_access = "^0.0.1"
tldextract = "^3.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"